# vscodeProj-stm32-cpp

./: .gitignore  CMakeLists.txt  README.md  gen_stm32_cppproj.sh
include/: main.h
src/: main.cpp  syscalls.c
